css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
    --dark-grey: #d9d9d9;
    --black: #000;
    --white: #fff;
}

body {
    display: flex;
    justify-content: center;
    margin: 0;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    box-sizing: border-box;
    padding: 0 50px;
}

header {
    display: flex;
    justify-content: space-between;
}

.logo-booki {
    width: 61px;
    height: 19px;
    padding: 30px 0px 50px 0px;
}

.nav-menu-item-accommodations:hover, .nav-menu-item-activities:hover {
    border-top: 2px solid var(--main-color);
    width: 100%;
    padding-top: 14px;
}

.nav-menu-item-accommodations {
    border-top: 2px solid var(--main-color);
    width: 100%;
    padding-top: 14px;
    font-size: 16px;
}

/* .nav-menu-item-activities {
    border-top: 2px solid var(--main-color);
    width: 100%;
    padding-top: 16px;
    font-size: 16px;
    border-top: none;
} */

ul {
    display: flex;
    gap: 68px;
    list-style-type: none;
    margin: 0;
}

h1 {
    margin-bottom: 8px;
    font-size: 22px;
}

p {
    margin-top: 8px;
    margin-bottom: 30px;
    font-size: 16px;
}

.search-form {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-bottom: 20px;
}

.fa-location-dot {
    background-color: var(--main-bg-color);
    padding: 18px 18px 18px 18px;
    border-radius: 14px 0px 0px 14px;
    font-size: 17px;
}

.maps-icon {
    color: var(--black);
}

.search-field {
    border: 1px solid var(--main-bg-color);
    padding: 14px 24px 14px 24px;
    margin-right: -5px;
    font-size: 18px;
    font-weight: bold;
}

.search-button {
    background-color: var(--main-color);
    padding: 15px 16px 15px 16px;
    border: none;
    border-radius: 0px 14px 14px 0px;
    color: var(--white);
    font-size: 18px;
    font-weight: bold;
}

.glass-button {
    display: none;
}

.filter-field {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 15px;
    margin-bottom: 20px;
}

.filter-bar {
    display: flex;
    gap: 10px;
}

.filter-button {
    align-items: center;
    background-color: var(--white);
    font-size: 17px;
    font-weight: bold;
    padding: 15px;
    border: 2px solid var(--dark-grey);
    border-radius: 50px 50px 50px 50px;
    gap: 10px;
}

.filter-button:hover {
    background-color: var(--filter-bg-color);
}

.info-section {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.info-icon {
    border-radius: 50%;
    border: 2px solid var(--main-bg-color);
    width: 24px;
    height: 24px;
    line-height: 23px;
    text-align: center;
}

.filter-field .fa-solid, 
.accommodations-and-popular .fa-solid {
    color: var(--main-color);
}

.info-section .fa-solid {
    color: var(--main-color);
}

a {
    color: inherit;
    text-decoration: none;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: var(--white);
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.card-rating .neutral-star {
    color: var(--main-bg-color)
}

/****** Hebergements And Populaires ***********/
.accommodations-and-popular {
    display: flex;
    justify-content: space-between;
    gap: 40px;
}

/****** Hebergements ***********/
.accommodations {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    width: 65%;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.accommodations-cards {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(29%, 1fr));
    gap: 30px;
}

.accommodations-cards img {
    width: 100%;
    height: 89px;
    object-fit: cover;
    border-radius: 20px 20px 0px 0px;
}

.accommodations-cards .card-content {
    width: 100%;
    padding-left: 15px;
    box-sizing: border-box;
}

.accommodations-cards .card-title {
    margin-top: 10px;
    margin-bottom: 8px;
}

.accommodations-cards .card-subtitle {
    margin: 0;
    margin-bottom: 8px;
    font-size: 14px;
}

.accommodations-cards .card-rating {
    margin-bottom: 5px;
}

/****** Populaires ***********/
.popular {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    width: 32%;
}

.popular-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.popular-cards .card {
    display: flex;
    margin-top: 30px;
}

.popular-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.popular-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.popular-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.popular-cards .card-subtitle {
    margin: 0;
    font-size: 14px;
}

.popular-cards .card-rating {
    margin-bottom: 5px;
}

/**** Activités à Marseille ****/
.activities-marseille {
    margin-top: 65px;
    gap: 20px;
    display: flex;
    flex-direction: column;
}

.container-card {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(22%, 1fr));
    gap: 30px;
}

.activities-marseille .card-activities {
    background-color: var(--white);
    border-radius: 20px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
    width: 100%;
    height: 100%;
}

.card-activities img {
    border-radius: 20px 20px 0px 0px;
    width: 100%;
    height: 439px;
    object-fit: cover;
}

.activities-marseille h3 {
    padding-left: 15px;
}

/**** Footer ****/
footer {
    background-color: var(--main-bg-color);
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(33%, 3fr));
    margin-top: 65px;
    padding-left: 20px;
}

.about-menu, .accommodations-menu, .help-menu {
    display: grid;
    grid-template-rows: repeat(auto-fit, 3fr);
    padding-left: 0px;
    gap: 15px;
}

/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media screen and (max-width: 1023px) {
    .filter-field {
        flex-wrap: wrap;
    }

    .filter-title {
        width: 100%;
    }

    .filter-button {
        font-size: 16px;
    }

    .accommodations-and-popular {
        display: flex;
        flex-direction: column;
        padding-right: 50px;
    }

    .accommodations {
        width: 100%;
    }

    .popular {
        width: 100%;
    }

    .popular-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        gap: 20px;
    }

    .popular-cards a {
        width: 100%;
    }

    .popular-cards .card-title {
        font-size: 14px;
    }

    .popular-cards .card-subtitle {
        font-size: 13px;
    }

    .container-card {
        grid-template-columns: repeat(auto-fit, minmax(calc((100% / 4) - 90px), 1fr));
    }

    .card-activities img {
        border-radius: 20px 20px 0px 0px;
        width: 100%;
        height: 200px;
        object-fit: cover;
    }
}

/* Small devices (phones, less than 768px) */
@media screen and (max-width: 767px) {
    body {
        padding: 0;
        margin: 0;
    }

    .main-container {
        padding: 0;
        margin: 0;
    }

    header {
        display: flex;
        flex-direction: column;
        padding-bottom: 15px;
    }

    .logo {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .nav-menu {
        display: flex;
        width: 100%;
    }

    .nav-menu-item-accommodations, .nav-menu-item-accommodations:hover, .nav-menu-item-activities:hover {
        border-bottom: 2px solid var(--main-color);
        padding-bottom: 14px;
        border-top: none;
    }

    .nav-menu-item-accommodations {
        display: flex;
        width: 50%;
    }

    .nav-menu-item-activities {
        display: flex;
        border-bottom: 2px solid var(--main-bg-color);
        padding-bottom: 14px;
        width: 50%;
    }

    .search-infos, .filter-field, .info-section, .accommodations {
        padding: 0 0 0 15px;
    }

    .text-button {
        display: none;
    }

    .glass-button {
        display: flex;
        color: var(--white);
    }

    .search-field {
        width: 195px;
    }

    .search-button {
        border-radius: 14px 14px 14px 14px;
        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
    }

    .filter-field {
        flex-wrap: wrap;
        margin: 0;
        padding-bottom: 35px;
    }
    
    .filter-title {
        width: 100%;
    }

    .filter-bar {
        flex-wrap: wrap;
        padding-right: 10px;
    }

    .filter-button {
        width: 47%;
        font-size: 14px;
        display: flex;
        justify-content: flex-start;
        gap: 10px;
    }

    .accommodations-and-popular {
        width: 100%;
        display: flex;
        flex-direction: column-reverse;
    }

    .accommodations {
        background-color: var(--white);
        width: 100%;
    }

    .accommodations-cards {
        display: flex;
        flex-direction: column;
        padding-right: 30px;
    }

    .popular {
        width: 100%;
        border-radius: 0;
        padding: 30px 0 30px 0;
    }

    .popular-title {
        display: flex;
        justify-content: space-around;
        align-items: center;
    }

    .popular-cards {
        display: flex;
        flex-direction: column;
        padding: 0 20px 0 20px;
        gap: 0;
    }

    .activities-marseille {
        padding: 0 0 0 30px;
    }

    .container-card {
        display: flex;
        flex-direction: column;
        gap: 5px;
        padding-right: 25px;
    }

    .container-card .card-title {
        padding-bottom: 20px;
    }

    footer {
        width: 100%;
        grid-template-columns: 1fr;
        gap: 20px;
    }
}

